# brutalize

./: Cargo.toml  README.md
anima/: Cargo.toml
anima/benches/: bench.rs
anima/src/: lib.rs  main.rs
anima_solver/: Cargo.toml  solutions.txt  solve_all.ps1
anima_solver/benches/: bench.rs
anima_solver/src/: lib.rs  main.rs
brutalize/: Cargo.toml
brutalize/src/: lib.rs
brutalize_cli/: Cargo.toml
brutalize_cli/src/: lib.rs
sausage/: Cargo.toml  run.sh  solve_all.ps1
sausage/puzzles/: barrow_set.txt  bays_neck.txt  beautiful_horizon.txt  burning_wharf.txt  comely_hearth.txt  cove.txt  eastreach.txt  emerson_jetty.txt  fallow_earth.txt  fiery_jut.txt  happy_pool.txt  infants_break.txt  inlet_shore.txt  lachrymose_head.txt  little_fire.txt  maidens_walk.txt  merchants_elegy.txt  rough_field.txt  sad_farm.txt  seafinger.txt  southjaunt.txt  the_anchorage.txt  the_clover.txt  the_great_tower.txt  the_paddock.txt  twisty_farm.txt
sausage/solutions/: barrow_set.txt  bays_neck.txt  beautiful_horizon.txt  burning_wharf.txt  comely_hearth.txt  cove.txt  eastreach.txt  emerson_jetty.txt  fallow_earth.txt  fiery_jut.txt  happy_pool.txt  infants_break.txt  inlet_shore.txt  lachrymose_head.txt  little_fire.txt  maidens_walk.txt  merchants_elegy.txt  rough_field.txt  sad_farm.txt  seafinger.txt  southjaunt.txt  the_anchorage.txt  the_clover.txt  the_paddock.txt  twisty_farm.txt
sausage/src/: lib.rs  main.rs
sausage_solver/: Cargo.toml  solutions.txt
sausage_solver/puzzles/: lachrymose_head.txt
solver_common/: Cargo.toml
sticky/: Cargo.toml
(+9 files in other folders)
