[package]
name = "anima_solver"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

[dependencies]
brutalize = { path = "../brutalize" }
brutalize_cli = { path = "../brutalize_cli" }
arrayvec = "0.7"
solver_common = { path = "../solver_common" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
